--- a/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
@@ -98,7 +98,8 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [MRU]
-MRUItem0=/Game/VRTemplate/Maps/VRTemplateMap
+MRUItem0=/Game/cyberpunk
+MRUItem1=/Game/VRTemplate/Maps/VRTemplateMap
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values
@@ -106,32 +107,32 @@ StaticMesh=StaticMesh.LOD0.MeshBuildSettings
 MeshNaniteSettings=
 
 [EditorStartup]
-LastLevel=/Game/VRTemplate/Maps/VRTemplateMap
+LastLevel=/Game/cyberpunk
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropMattress_A
-MRUItem1=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgSmBusStop_A
+MRUItem0=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgSaltySquid_A
+MRUItem1=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgSmTatooShop_A
 MRUItem2=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgStreetApartment_A
-MRUItem3=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgSaltySquid_A
+MRUItem3=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgSmBusStop_A
 MRUItem4=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgPCRepair_A
-MRUItem5=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgLibrary_A
+MRUItem5=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgMdMediaCenter_A
 MRUItem6=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgGameStore_A
 MRUItem7=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgConvenienceStore_A
 MRUItem8=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgBikeStop_A
 MRUItem9=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgAlley_A
 MRUItem10=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgAbandonedRestaurant_A
 MRUItem11=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgAbandonedBuilding_A
-MRUItem12=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_VehicleDjVan_A
-MRUItem13=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_therogue_a
-MRUItem14=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_transcendence_a
-MRUItem15=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_roofstructure_c
-MRUItem16=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_roofstructure_b
-MRUItem17=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_cryptosafe_b
-MRUItem18=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_parallax_a
-MRUItem19=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_pcrepair_a
+MRUItem12=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropVendingMachine_B
+MRUItem13=/Game/cyberpunk
+MRUItem14=/Game/VRTemplate/Maps/VRTemplateMap
+MRUItem15=/Game/modi/ancient/ancient
+MRUItem16=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropMattress_A
+MRUItem17=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgLibrary_A
+MRUItem18=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_VehicleDjVan_A
+MRUItem19=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_therogue_a
 
 [DetailCategories]
 KB3D_CBP_FudCup_A_C.Tick=True
@@ -886,6 +887,227 @@ KB3D_CBD_PropMattress_A_C.HLOD=True
 KB3D_CBD_PropMattress_A_C.Physics=True
 KB3D_CBD_PropMattress_A_C.WorldPartition=True
 KB3D_CBD_PropMattress_A_C.Events=True
+DatasmithScene.ImportSettings=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.HLOD=True
+StaticMeshActor.PathTracing=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Networking=True
+StaticMeshActor.Actor=True
+SkyLight.TransformCommon=False
+SkyLight.Light=True
+SkyLight.Rendering=True
+SkyLight.DistanceFieldAmbientOcclusion=True
+SkyLight.AtmosphereAndCloud=True
+SkyLight.Visualization=True
+SkyLight.RayTracing=True
+SkyLight.SkyLight=True
+SkyLight.Tags=True
+SkyLight.Cooking=True
+SkyLight.Physics=True
+SkyLight.Networking=True
+SkyLight.Actor=True
+VolumetricCloud.TransformCommon=True
+VolumetricCloud.Layer=True
+VolumetricCloud.Planet=True
+VolumetricCloud.Cloud Material=True
+VolumetricCloud.Cloud Tracing=True
+VolumetricCloud.Rendering=True
+VolumetricCloud.Physics=True
+VolumetricCloud.Tags=True
+VolumetricCloud.Activation=True
+VolumetricCloud.Cooking=True
+VolumetricCloud.Replication=True
+VolumetricCloud.Networking=True
+VolumetricCloud.Actor=True
+KB3D_CBD_BldgLgPCRepair_A_C.TransformCommon=True
+KB3D_CBD_BldgLgPCRepair_A_C.Networking=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Replication=True
+Actor.Collision=True
+Actor.HLOD=True
+Actor.Physics=True
+Actor.Networking=True
+Actor.Input=True
+Actor.Actor=True
+KB3D_CBD_BldgMdMediaCenter_A_C.TransformCommon=True
+KB3D_CBD_BldgMdMediaCenter_A_C.Rendering=True
+KB3D_CBD_BldgMdMediaCenter_A_C.Replication=True
+KB3D_CBD_BldgMdMediaCenter_A_C.Collision=True
+KB3D_CBD_BldgMdMediaCenter_A_C.HLOD=True
+KB3D_CBD_BldgMdMediaCenter_A_C.Physics=True
+KB3D_CBD_BldgMdMediaCenter_A_C.Networking=True
+KB3D_CBD_BldgMdMediaCenter_A_C.Input=True
+KB3D_CBD_BldgMdMediaCenter_A_C.Actor=True
+KB3D_CBD_BldgSmTatooShop_A_C.TransformCommon=True
+KB3D_CBD_BldgSmTatooShop_A_C.Rendering=True
+KB3D_CBD_BldgSmTatooShop_A_C.Replication=True
+KB3D_CBD_BldgSmTatooShop_A_C.Collision=True
+KB3D_CBD_BldgSmTatooShop_A_C.HLOD=True
+KB3D_CBD_BldgSmTatooShop_A_C.Physics=True
+KB3D_CBD_BldgSmTatooShop_A_C.Networking=True
+KB3D_CBD_BldgSmTatooShop_A_C.Input=True
+KB3D_CBD_BldgSmTatooShop_A_C.Actor=True
+KB3D_CBD_PropLightPole_B_C.TransformCommon=True
+KB3D_CBD_PropLightPole_B_C.Rendering=True
+KB3D_CBD_PropLightPole_B_C.Replication=True
+KB3D_CBD_PropLightPole_B_C.Collision=True
+KB3D_CBD_PropLightPole_B_C.HLOD=True
+KB3D_CBD_PropLightPole_B_C.Physics=True
+KB3D_CBD_PropLightPole_B_C.Networking=True
+KB3D_CBD_PropLightPole_B_C.Input=True
+KB3D_CBD_PropLightPole_B_C.Actor=True
+KB3D_CBD_PropVendingMachine_E_C.TransformCommon=True
+KB3D_CBD_PropVendingMachine_E_C.Rendering=True
+KB3D_CBD_PropVendingMachine_E_C.Replication=True
+KB3D_CBD_PropVendingMachine_E_C.Collision=True
+KB3D_CBD_PropVendingMachine_E_C.HLOD=True
+KB3D_CBD_PropVendingMachine_E_C.Physics=True
+KB3D_CBD_PropVendingMachine_E_C.Networking=True
+KB3D_CBD_PropVendingMachine_E_C.Input=True
+KB3D_CBD_PropVendingMachine_E_C.Actor=True
+KB3D_CBD_PropVendingMachine_B_C.Tick=True
+KB3D_CBD_PropVendingMachine_B_C.Replication=True
+KB3D_CBD_PropVendingMachine_B_C.Rendering=True
+KB3D_CBD_PropVendingMachine_B_C.Collision=True
+KB3D_CBD_PropVendingMachine_B_C.Actor=True
+KB3D_CBD_PropVendingMachine_B_C.Input=True
+KB3D_CBD_PropVendingMachine_B_C.HLOD=True
+KB3D_CBD_PropVendingMachine_B_C.Physics=True
+KB3D_CBD_PropVendingMachine_B_C.WorldPartition=True
+KB3D_CBD_PropVendingMachine_B_C.Events=True
+KB3D_CBD_PropVendingMachine_B_C.TransformCommon=True
+KB3D_CBD_PropVendingMachine_B_C.Networking=True
+KB3D_CBD_VehicleDjVan_A_C.TransformCommon=True
+KB3D_CBD_VehicleDjVan_A_C.Networking=True
+KB3D_CBD_BldgMdBusStop_A_C.TransformCommon=True
+KB3D_CBD_BldgMdBusStop_A_C.Rendering=True
+KB3D_CBD_BldgMdBusStop_A_C.Replication=True
+KB3D_CBD_BldgMdBusStop_A_C.Collision=True
+KB3D_CBD_BldgMdBusStop_A_C.HLOD=True
+KB3D_CBD_BldgMdBusStop_A_C.Physics=True
+KB3D_CBD_BldgMdBusStop_A_C.Networking=True
+KB3D_CBD_BldgMdBusStop_A_C.Input=True
+KB3D_CBD_BldgMdBusStop_A_C.Actor=True
+KB3D_CBD_BldgLgAlley_A_C.TransformCommon=True
+KB3D_CBD_BldgLgAlley_A_C.Networking=True
+KB3D_CBD_BldgLgBikeStop_A_C.TransformCommon=True
+KB3D_CBD_BldgLgBikeStop_A_C.Networking=True
+KB3D_CBD_BldgMdMediaCenter_A_C.Tick=True
+KB3D_CBD_BldgMdMediaCenter_A_C.WorldPartition=True
+KB3D_CBD_BldgMdMediaCenter_A_C.Events=True
+KB3D_CBP_RoofStructure_C_C.TransformCommon=True
+KB3D_CBP_RoofStructure_C_C.Networking=True
+KB3D_CBD_PropTraffickControl_A_C.TransformCommon=True
+KB3D_CBD_PropTraffickControl_A_C.Rendering=True
+KB3D_CBD_PropTraffickControl_A_C.Replication=True
+KB3D_CBD_PropTraffickControl_A_C.Collision=True
+KB3D_CBD_PropTraffickControl_A_C.HLOD=True
+KB3D_CBD_PropTraffickControl_A_C.Physics=True
+KB3D_CBD_PropTraffickControl_A_C.Networking=True
+KB3D_CBD_PropTraffickControl_A_C.Input=True
+KB3D_CBD_PropTraffickControl_A_C.Actor=True
+KB3D_CBD_PropTraffickControl_C_C.TransformCommon=True
+KB3D_CBD_PropTraffickControl_C_C.Rendering=True
+KB3D_CBD_PropTraffickControl_C_C.Replication=True
+KB3D_CBD_PropTraffickControl_C_C.Collision=True
+KB3D_CBD_PropTraffickControl_C_C.HLOD=True
+KB3D_CBD_PropTraffickControl_C_C.Physics=True
+KB3D_CBD_PropTraffickControl_C_C.Networking=True
+KB3D_CBD_PropTraffickControl_C_C.Input=True
+KB3D_CBD_PropTraffickControl_C_C.Actor=True
+KB3D_CBD_PropTraffickControl_H_C.TransformCommon=True
+KB3D_CBD_PropTraffickControl_H_C.Rendering=True
+KB3D_CBD_PropTraffickControl_H_C.Replication=True
+KB3D_CBD_PropTraffickControl_H_C.Collision=True
+KB3D_CBD_PropTraffickControl_H_C.HLOD=True
+KB3D_CBD_PropTraffickControl_H_C.Physics=True
+KB3D_CBD_PropTraffickControl_H_C.Networking=True
+KB3D_CBD_PropTraffickControl_H_C.Input=True
+KB3D_CBD_PropTraffickControl_H_C.Actor=True
+KB3D_CBD_PropTrash_E_C.TransformCommon=True
+KB3D_CBD_PropTrash_E_C.Rendering=True
+KB3D_CBD_PropTrash_E_C.Replication=True
+KB3D_CBD_PropTrash_E_C.Collision=True
+KB3D_CBD_PropTrash_E_C.HLOD=True
+KB3D_CBD_PropTrash_E_C.Physics=True
+KB3D_CBD_PropTrash_E_C.Networking=True
+KB3D_CBD_PropTrash_E_C.Input=True
+KB3D_CBD_PropTrash_E_C.Actor=True
+KB3D_CBD_PropTrashcan_B_C.TransformCommon=True
+KB3D_CBD_PropTrashcan_B_C.Rendering=True
+KB3D_CBD_PropTrashcan_B_C.Replication=True
+KB3D_CBD_PropTrashcan_B_C.Collision=True
+KB3D_CBD_PropTrashcan_B_C.HLOD=True
+KB3D_CBD_PropTrashcan_B_C.Physics=True
+KB3D_CBD_PropTrashcan_B_C.Networking=True
+KB3D_CBD_PropTrashcan_B_C.Input=True
+KB3D_CBD_PropTrashcan_B_C.Actor=True
+KB3D_CBD_PropMattress_A_C.TransformCommon=True
+KB3D_CBD_PropMattress_A_C.Networking=True
+KB3D_CBD_PropTrashcan_C_C.TransformCommon=True
+KB3D_CBD_PropTrashcan_C_C.Rendering=True
+KB3D_CBD_PropTrashcan_C_C.Replication=True
+KB3D_CBD_PropTrashcan_C_C.Collision=True
+KB3D_CBD_PropTrashcan_C_C.HLOD=True
+KB3D_CBD_PropTrashcan_C_C.Physics=True
+KB3D_CBD_PropTrashcan_C_C.Networking=True
+KB3D_CBD_PropTrashcan_C_C.Input=True
+KB3D_CBD_PropTrashcan_C_C.Actor=True
+KB3D_CBD_PropTrash_G_C.TransformCommon=True
+KB3D_CBD_PropTrash_G_C.Rendering=True
+KB3D_CBD_PropTrash_G_C.Replication=True
+KB3D_CBD_PropTrash_G_C.Collision=True
+KB3D_CBD_PropTrash_G_C.HLOD=True
+KB3D_CBD_PropTrash_G_C.Physics=True
+KB3D_CBD_PropTrash_G_C.Networking=True
+KB3D_CBD_PropTrash_G_C.Input=True
+KB3D_CBD_PropTrash_G_C.Actor=True
+KB3D_CBD_BldgSmBusStop_A_C.TransformCommon=True
+KB3D_CBD_BldgSmBusStop_A_C.Networking=True
+KB3D_CBD_BldgLgStreetApartment_A_C.TransformCommon=True
+KB3D_CBD_BldgLgStreetApartment_A_C.Networking=True
+KB3D_CBD_PropLightPole_A_C.TransformCommon=True
+KB3D_CBD_PropLightPole_A_C.Rendering=True
+KB3D_CBD_PropLightPole_A_C.Replication=True
+KB3D_CBD_PropLightPole_A_C.Collision=True
+KB3D_CBD_PropLightPole_A_C.HLOD=True
+KB3D_CBD_PropLightPole_A_C.Physics=True
+KB3D_CBD_PropLightPole_A_C.Networking=True
+KB3D_CBD_PropLightPole_A_C.Input=True
+KB3D_CBD_PropLightPole_A_C.Actor=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.HLOD=True
+PlayerStart.Physics=True
+PlayerStart.Networking=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+KB3D_CBD_BldgSmTatooShop_A_C.Tick=True
+KB3D_CBD_BldgSmTatooShop_A_C.WorldPartition=True
+KB3D_CBD_BldgSmTatooShop_A_C.Events=True
+KB3D_CBD_PropLightPole_F_C.TransformCommon=True
+KB3D_CBD_PropLightPole_F_C.Rendering=True
+KB3D_CBD_PropLightPole_F_C.Replication=True
+KB3D_CBD_PropLightPole_F_C.Collision=True
+KB3D_CBD_PropLightPole_F_C.HLOD=True
+KB3D_CBD_PropLightPole_F_C.Physics=True
+KB3D_CBD_PropLightPole_F_C.Networking=True
+KB3D_CBD_PropLightPole_F_C.Input=True
+KB3D_CBD_PropLightPole_F_C.Actor=True
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -922,7 +1144,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/modi/cyberdistrict/1/actors
+ContentBrowserTab1.SelectedPaths=/Game/modi/cyberdistrict/2/Actors
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -1395,6 +1617,10 @@ ContentBrowserTab4.CurrentViewType=1
 /Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgStreetApartment_A.KB3D_CBD_BldgLgStreetApartment_A=1
 /Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgSmBusStop_A.KB3D_CBD_BldgSmBusStop_A=1
 /Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropMattress_A.KB3D_CBD_PropMattress_A=1
+/Game/modi/ancient/ancient.ancient=1
+/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropVendingMachine_B.KB3D_CBD_PropVendingMachine_B=1
+/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgMdMediaCenter_A.KB3D_CBD_BldgMdMediaCenter_A=1
+/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgSmTatooShop_A.KB3D_CBD_BldgSmTatooShop_A=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2721,4 +2947,29 @@ HierarchicalLODOutliner.LastCompileMethod=Unknown
 [Python]
 LastDirectory=
 RecentsFiles=/Users/Shared/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[PlacementMode]
+RecentlyPlaced=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropLightPole_F.KB3D_CBD_PropLightPole_F;
+RecentlyPlaced=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_BldgLgSaltySquid_A_TableB.KB3D_CBD_BldgLgSaltySquid_A_TableB;
+RecentlyPlaced=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_BldgLgSaltySquid_A_TableA.KB3D_CBD_BldgLgSaltySquid_A_TableA;
+RecentlyPlaced=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_BldgLgSaltySquid_A_ScreenG.KB3D_CBD_BldgLgSaltySquid_A_ScreenG;
+RecentlyPlaced=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_BldgLgSaltySquid_A_Building.KB3D_CBD_BldgLgSaltySquid_A_Building;
+RecentlyPlaced=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_BldgLgAbandonedBuilding_A_Sidewalk.KB3D_CBD_BldgLgAbandonedBuilding_A_Sidewalk;
+RecentlyPlaced=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_BldgLgAbandonedRestaurant_A_BulletCasing.KB3D_CBD_BldgLgAbandonedRestaurant_A_BulletCasing;
+RecentlyPlaced=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_BldgLgAbandonedRestaurant_A_ACunitB.KB3D_CBD_BldgLgAbandonedRestaurant_A_ACunitB;
+RecentlyPlaced=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropTrash_E.KB3D_CBD_PropTrash_E;
+RecentlyPlaced=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropTraffickControl_H.KB3D_CBD_PropTraffickControl_H;
+RecentlyPlaced=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropLightPole_A.KB3D_CBD_PropLightPole_A;
+RecentlyPlaced=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgStreetApartment_A.KB3D_CBD_BldgLgStreetApartment_A;
+RecentlyPlaced=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgSmBusStop_A.KB3D_CBD_BldgSmBusStop_A;
+RecentlyPlaced=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropTrash_G.KB3D_CBD_PropTrash_G;
+RecentlyPlaced=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropTrashcan_C.KB3D_CBD_PropTrashcan_C;
+RecentlyPlaced=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropMattress_A.KB3D_CBD_PropMattress_A;
+RecentlyPlaced=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropTrashcan_B.KB3D_CBD_PropTrashcan_B;
+RecentlyPlaced=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropTraffickControl_C.KB3D_CBD_PropTraffickControl_C;
+RecentlyPlaced=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropTraffickControl_A.KB3D_CBD_PropTraffickControl_A;
+RecentlyPlaced=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_roofstructure_c.KB3D_CBP_RoofStructure_C;
+
+[SelectionDetails]
+PreserveScaleRatio=True
 
