--- a/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
@@ -110,29 +110,29 @@ MeshNaniteSettings=
 LastLevel=/Game/cyberpunk
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgSaltySquid_A
-MRUItem1=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgSmTatooShop_A
-MRUItem2=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgStreetApartment_A
-MRUItem3=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgSmBusStop_A
-MRUItem4=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgPCRepair_A
-MRUItem5=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgMdMediaCenter_A
-MRUItem6=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgGameStore_A
-MRUItem7=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgConvenienceStore_A
-MRUItem8=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgBikeStop_A
-MRUItem9=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgAlley_A
-MRUItem10=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgAbandonedRestaurant_A
-MRUItem11=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgAbandonedBuilding_A
-MRUItem12=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropVendingMachine_B
-MRUItem13=/Game/cyberpunk
-MRUItem14=/Game/VRTemplate/Maps/VRTemplateMap
-MRUItem15=/Game/modi/ancient/ancient
-MRUItem16=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropMattress_A
-MRUItem17=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgLibrary_A
-MRUItem18=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_VehicleDjVan_A
-MRUItem19=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_therogue_a
+MRUItem0=/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_cryptosafe_a_buildingb
+MRUItem1=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_cryptosafe_a
+MRUItem2=/Game/cyberpunk
+MRUItem3=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_ethereal_a
+MRUItem4=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_transcendence_a
+MRUItem5=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_cryptosafe_b
+MRUItem6=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_k
+MRUItem7=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acpd_a
+MRUItem8=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgSaltySquid_A
+MRUItem9=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgSmTatooShop_A
+MRUItem10=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgStreetApartment_A
+MRUItem11=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgSmBusStop_A
+MRUItem12=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgPCRepair_A
+MRUItem13=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgMdMediaCenter_A
+MRUItem14=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgGameStore_A
+MRUItem15=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgConvenienceStore_A
+MRUItem16=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgBikeStop_A
+MRUItem17=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgAlley_A
+MRUItem18=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgAbandonedRestaurant_A
+MRUItem19=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgAbandonedBuilding_A
 
 [DetailCategories]
 KB3D_CBP_FudCup_A_C.Tick=True
@@ -1108,6 +1108,42 @@ KB3D_CBD_PropLightPole_F_C.Physics=True
 KB3D_CBD_PropLightPole_F_C.Networking=True
 KB3D_CBD_PropLightPole_F_C.Input=True
 KB3D_CBD_PropLightPole_F_C.Actor=True
+KB3D_CBP_Residential_K_C.TransformCommon=True
+KB3D_CBP_Residential_K_C.Networking=True
+KB3D_CBP_CyberBunny_A_C.TransformCommon=True
+KB3D_CBP_CyberBunny_A_C.Networking=True
+KB3D_CBP_Xmedia_A_C.TransformCommon=True
+KB3D_CBP_Xmedia_A_C.Networking=True
+KB3D_CBP_Hypergear_B_C.TransformCommon=True
+KB3D_CBP_Hypergear_B_C.Networking=True
+KB3D_CBP_CryptoSafe_B_C.TransformCommon=True
+KB3D_CBP_CryptoSafe_B_C.Networking=True
+KB3D_CBP_Transcendence_A_C.TransformCommon=True
+KB3D_CBP_Transcendence_A_C.Networking=True
+KB3D_CBP_Ethereal_A_C.TransformCommon=True
+KB3D_CBP_Ethereal_A_C.Networking=True
+KB3D_CBP_Parallax_A_C.TransformCommon=True
+KB3D_CBP_Parallax_A_C.Networking=True
+KB3D_CBP_Residential_J_C.TransformCommon=True
+KB3D_CBP_Residential_J_C.Networking=True
+KB3D_CBP_Residential_L_C.TransformCommon=True
+KB3D_CBP_Residential_L_C.Networking=True
+KB3D_CBP_Corporate_A_C.TransformCommon=True
+KB3D_CBP_Corporate_A_C.Networking=True
+KB3D_CBP_CryptoSafe_A_C.TransformCommon=True
+KB3D_CBP_CryptoSafe_A_C.Networking=True
+KB3D_CBP_Hypergear_A_C.TransformCommon=True
+KB3D_CBP_Hypergear_A_C.Networking=True
+KB3D_CBP_Residential_I_C.TransformCommon=True
+KB3D_CBP_Residential_I_C.Networking=True
+KB3D_CBP_FudCup_A_C.TransformCommon=True
+KB3D_CBP_FudCup_A_C.Networking=True
+KB3D_CBP_ACPD_A_C.TransformCommon=True
+KB3D_CBP_ACPD_A_C.Networking=True
+KB3D_CBP_PcRepair_A_C.TransformCommon=True
+KB3D_CBP_PcRepair_A_C.Networking=True
+KB3D_CBP_Terraluma_A_C.TransformCommon=True
+KB3D_CBP_Terraluma_A_C.Networking=True
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1122,7 +1158,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/modi/cyberdistrict/1/geometries
+ContentBrowserDrawer.SelectedPaths=/Game/modi/cyberdistrict/1/actors
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1144,7 +1180,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/modi/cyberdistrict/2/Actors
+ContentBrowserTab1.SelectedPaths=/Game/modi/cyberdistrict/1/actors
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -1621,6 +1657,7 @@ ContentBrowserTab4.CurrentViewType=1
 /Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropVendingMachine_B.KB3D_CBD_PropVendingMachine_B=1
 /Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgMdMediaCenter_A.KB3D_CBD_BldgMdMediaCenter_A=1
 /Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgSmTatooShop_A.KB3D_CBD_BldgSmTatooShop_A=1
+/Game/modi/cyberdistrict/1/geometries/kb3d_cbp_cryptosafe_a_buildingb.KB3D_CBP_CryptoSafe_A_BuildingB=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1919,11 +1956,11 @@ PreviewDeviceProfileName=None
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=38.500
-WindowSize=X=1512.000 Y=835.000
+WindowSize=X=1728.000 Y=1025.000
 InitiallyMaximized=True
 
 [Directories2]
-UNR=../../../../../../anny.g/Documents/GitHub/Pj_1/Content/
+UNR=../../../../../Users/lichunxiao/Documents/GitHub/未命名/Content
 BRUSH=../../../../../../anny.g/Documents/GitHub/Pj_1/Content/
 FBX=../../../../../../anny.g/Documents/GitHub/Pj_1/Content/
 FBXAnim=../../../../../../anny.g/Documents/GitHub/Pj_1/Content/
@@ -2946,29 +2983,30 @@ HierarchicalLODOutliner.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=/Applications/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=/Users/Shared/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [PlacementMode]
+RecentlyPlaced=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_fudcup_a.KB3D_CBP_FudCup_A;
+RecentlyPlaced=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_l.KB3D_CBP_Residential_L;
+RecentlyPlaced=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_cyberbunny_a.KB3D_CBP_CyberBunny_A;
+RecentlyPlaced=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_hypergear_a.KB3D_CBP_Hypergear_A;
+RecentlyPlaced=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_parallax_a.KB3D_CBP_Parallax_A;
+RecentlyPlaced=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_terraluma_a.KB3D_CBP_Terraluma_A;
+RecentlyPlaced=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_j.KB3D_CBP_Residential_J;
+RecentlyPlaced=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_cryptosafe_b.KB3D_CBP_CryptoSafe_B;
+RecentlyPlaced=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_corporate_a.KB3D_CBP_Corporate_A;
+RecentlyPlaced=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_pcrepair_a.KB3D_CBP_PcRepair_A;
+RecentlyPlaced=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_acpd_a.KB3D_CBP_ACPD_A;
+RecentlyPlaced=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_xmedia_a.KB3D_CBP_Xmedia_A;
+RecentlyPlaced=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_transcendence_a.KB3D_CBP_Transcendence_A;
+RecentlyPlaced=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_i.KB3D_CBP_Residential_I;
+RecentlyPlaced=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_ethereal_a.KB3D_CBP_Ethereal_A;
+RecentlyPlaced=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_cryptosafe_a.KB3D_CBP_CryptoSafe_A;
+RecentlyPlaced=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_hypergear_b.KB3D_CBP_Hypergear_B;
+RecentlyPlaced=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_residential_k.KB3D_CBP_Residential_K;
 RecentlyPlaced=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropLightPole_F.KB3D_CBD_PropLightPole_F;
 RecentlyPlaced=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_BldgLgSaltySquid_A_TableB.KB3D_CBD_BldgLgSaltySquid_A_TableB;
-RecentlyPlaced=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_BldgLgSaltySquid_A_TableA.KB3D_CBD_BldgLgSaltySquid_A_TableA;
-RecentlyPlaced=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_BldgLgSaltySquid_A_ScreenG.KB3D_CBD_BldgLgSaltySquid_A_ScreenG;
-RecentlyPlaced=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_BldgLgSaltySquid_A_Building.KB3D_CBD_BldgLgSaltySquid_A_Building;
-RecentlyPlaced=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_BldgLgAbandonedBuilding_A_Sidewalk.KB3D_CBD_BldgLgAbandonedBuilding_A_Sidewalk;
-RecentlyPlaced=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_BldgLgAbandonedRestaurant_A_BulletCasing.KB3D_CBD_BldgLgAbandonedRestaurant_A_BulletCasing;
-RecentlyPlaced=/Game/modi/cyberdistrict/2/Geometries/KB3D_CBD_BldgLgAbandonedRestaurant_A_ACunitB.KB3D_CBD_BldgLgAbandonedRestaurant_A_ACunitB;
-RecentlyPlaced=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropTrash_E.KB3D_CBD_PropTrash_E;
-RecentlyPlaced=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropTraffickControl_H.KB3D_CBD_PropTraffickControl_H;
-RecentlyPlaced=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropLightPole_A.KB3D_CBD_PropLightPole_A;
-RecentlyPlaced=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgLgStreetApartment_A.KB3D_CBD_BldgLgStreetApartment_A;
-RecentlyPlaced=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_BldgSmBusStop_A.KB3D_CBD_BldgSmBusStop_A;
-RecentlyPlaced=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropTrash_G.KB3D_CBD_PropTrash_G;
-RecentlyPlaced=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropTrashcan_C.KB3D_CBD_PropTrashcan_C;
-RecentlyPlaced=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropMattress_A.KB3D_CBD_PropMattress_A;
-RecentlyPlaced=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropTrashcan_B.KB3D_CBD_PropTrashcan_B;
-RecentlyPlaced=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropTraffickControl_C.KB3D_CBD_PropTraffickControl_C;
-RecentlyPlaced=/Game/modi/cyberdistrict/2/Actors/KB3D_CBD_PropTraffickControl_A.KB3D_CBD_PropTraffickControl_A;
-RecentlyPlaced=/Game/modi/cyberdistrict/1/actors/kb3d_cbp_roofstructure_c.KB3D_CBP_RoofStructure_C;
 
 [SelectionDetails]
 PreserveScaleRatio=True
